k8s/base/activemq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: activemq
    namespace: sample-app-ns
spec:
    replicas: 1
    selector:
        matchLabels:
            app: activemq
    template:
        metadata:
            labels:
                app: activemq
        spec:
            containers:
                -   name: activemq
                    image: apache/activemq-artemis:2.44.0
                    ports:
                        -   containerPort: 61616
                            name: broker
                        -   containerPort: 8161
                            name: console
---
apiVersion: v1
kind: Service
metadata:
    name: activemq
    namespace: sample-app-ns
spec:
    selector:
        app: activemq
    ports:
        -   name: broker
            port: 61616
            targetPort: 61616
        -   name: console
            port: 8161
            targetPort: 8161
