k8s/base/emailhog.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: emailhog
    namespace: sample-app-ns
spec:
    replicas: 1
    selector:
        matchLabels:
            app: emailhog
    template:
        metadata:
            labels:
                app: emailhog
        spec:
            containers:
                -   name: emailhog
                    image: richarvey/mailhog:latest
                    ports:
                        -   containerPort: 1025
                            name: smtp
                        -   containerPort: 8025
                            name: web
                    resources:
                        requests:
                            memory: "64Mi"
                            cpu: "50m"
                        limits:
                            memory: "128Mi"
                            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
    name: emailhog
    namespace: sample-app-ns
spec:
    selector:
        app: emailhog
    ports:
        -   name: smtp
            port: 1025
            targetPort: 1025
        -   name: web
            port: 8025
            targetPort: 8025
