k8s/base/keycloak.yaml
# First, create a ConfigMap from your realm JSON files:
# kubectl create configmap keycloak-realm --from-file=../main-app/main-webapp/src/main/resources/keycloak/ -n sample-app-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: keycloak
    namespace: sample-app-ns
spec:
    replicas: 1
    selector:
        matchLabels:
            app: keycloak
    template:
        metadata:
            labels:
                app: keycloak
        spec:
            containers:
                -   name: keycloak
                    image: quay.io/keycloak/keycloak:26.6.1
                    args: [ "start-dev", "--import-realm" ]
                    ports:
                        -   containerPort: 8080
                    volumeMounts:
                        -   name: realm-import
                            mountPath: /opt/keycloak/data/import
            volumes:
                -   name: realm-import
                    configMap:
                        name: keycloak-realm
---
apiVersion: v1
kind: Service
metadata:
    name: keycloak
    namespace: sample-app-ns
spec:
    type: NodePort
    selector:
        app: keycloak
    ports:
        -   name: http
            port: 8080
            targetPort: 8080
            nodePort: 30080
# Add this to keycloak.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: keycloak-external
    namespace: sample-app-ns
spec:
    type: NodePort
    selector:
        app: keycloak
    ports:
        -   name: http
            port: 30080
            targetPort: 8080
#            nodePort: 30080
