k8s/base/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mysql
    namespace: app-platform
spec:
    replicas: 1
    selector:
        matchLabels:
            app: mysql
    template:
        metadata:
            labels:
                app: mysql
        spec:
            containers:
                -   name: mysql
                    image: mysql:latest
                    args:
                        - "--lower_case_table_names=1"
                        - "--character_set_server=utf8mb4"
                        - "--explicit_defaults_for_timestamp"
                    ports:
                        -   containerPort: 3306
                    volumeMounts:
                        -   name: mysql-storage
                            mountPath: /var/lib/mysql
                    readinessProbe:
                        exec:
                            command: [ "mysqladmin", "ping", "-h", "localhost" ]
                        initialDelaySeconds: 20
                        periodSeconds: 10
            volumes:
                -   name: mysql-storage
                    persistentVolumeClaim:
                        claimName: mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
    name: mysql
    namespace: app-platform
spec:
    selector:
        app: mysql
    ports:
        -   port: 3306
            targetPort: 3306
