k8s/base/zipkin.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: zipkin
    namespace: sample-app-ns
spec:
    replicas: 1
    selector:
        matchLabels:
            app: zipkin
    template:
        metadata:
            labels:
                app: zipkin
        spec:
            containers:
                -   name: zipkin
                    image: openzipkin/zipkin:latest
                    ports:
                        -   containerPort: 9411
                    resources:
                        requests:
                            memory: "256Mi"
                            cpu: "100m"
                        limits:
                            memory: "512Mi"
                            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
    name: zipkin
    namespace: sample-app-ns
spec:
    type: NodePort
    selector:
        app: zipkin
    ports:
        -   port: 9411
            targetPort: 9411
            nodePort: 30411
