k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: app-ingress
    namespace: app-platform
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
        nginx.ingress.kubernetes.io/ssl-redirect: "false"
        nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
    ingressClassName: nginx
    rules:
        -   host: keycloak.local
            http:
                paths:
                    -   path: /
                        pathType: Prefix
                        backend:
                            service:
                                name: keycloak
                                port:
                                    number: 8080
        -   host: app.local
            http:
                paths:
                    -   path: /
                        pathType: Prefix
                        backend:
                            service:
                                name: main-webapp
                                port:
                                    number: 8081
        -   host: zipkin.local
            http:
                paths:
                    -   path: /
                        pathType: Prefix
                        backend:
                            service:
                                name: zipkin
                                port:
                                    number: 9411
        -   host: emailhog.local
            http:
                paths:
                    -   path: /
                        pathType: Prefix
                        backend:
                            service:
                                name: emailhog
                                port:
                                    number: 8025
